--- a/exchanger/public/index.html
+++ b/exchanger/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js" defer></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,7 +29,15 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: rgb(0, 0, 0);"></div>
+    <div
+      id="root"
+      style="
+        background-color: rgb(0, 0, 0);
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      "
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
